--- a/fluent_mind/templates/index.html
+++ b/fluent_mind/templates/index.html
@@ -1,1 +1,11 @@
-Hello, Bot!
+{% extends 'base.html' %}
+
+{% load bootstrap4 %}
+
+{% block title %}
+    Fluent Mind
+{% endblock %}
+
+{% block content %}
+    Hello, Bot!
+{% endblock %}
