add tokens count

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -14,23 +14,25 @@
             <tr>
                 <th>ID</th>
                 <th>Role</th>
-                <th>User ID</th>
+                <th>Telegram ID</th>
                 <th>Username</th>
                 <th>Text</th>
                 <th>Date</th>
+                <th>Tokens</th>
             </tr>
         </thead>
 
         <tbody>
-            {% if chats %}
-                {% for chat in chats %}
+            {% if texts %}
+                {% for text in texts %}
                     <tr>
-                        <td>{{ chat.id }}</td>
-                        <td>{{ chat.role }}</td>
-                        <td>{{ chat.user_id }}</td>
-                        <td>{{ chat.username }}</td>
-                        <td>{{ chat.text }}</td>
-                        <td>{{ chat.date|date:"d.m.Y H:i" }}</td>
+                        <td>{{ text.id }}</td>
+                        <td>{{ text.role }}</td>
+                        <td>{{ text.telegram_id }}</td>
+                        <td>{{ text.username }}</td>
+                        <td>{{ text.text }}</td>
+                        <td>{{ text.date|date:"d.m.Y H:i" }}</td>
+                        <td>{{ text.tokens }}</td>
                     </tr>
                 {% endfor %}
             {% endif %}
