add chats functionality

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -15,6 +15,7 @@
                 <th>ID</th>
                 <th>Telegram ID</th>
                 <th>Username</th>
+                <th>Chat</th>
                 <th>Request</th>
                 <th>Response</th>
                 <th>Date</th>
@@ -30,6 +31,7 @@
                         <td>{{ text.id }}</td>
                         <td>{{ text.telegram_id }}</td>
                         <td>{{ text.username }}</td>
+                        <td>{{ text.chat }}</td>
                         <td>{{ text.request }}</td>
                         <td>{{ text.response }}</td>
                         <td>{{ text.date|date:"d.m.Y H:i" }}</td>
