--- a/templates/messages.html
+++ b/templates/messages.html
@@ -18,6 +18,7 @@
                 <th>Chat</th>
                 <th>Request</th>
                 <th>Response</th>
+                <th>Type</th>
                 <th>Date</th>
             </tr>
         </thead>
@@ -32,6 +33,7 @@
                         <td>{{ text.chat }}</td>
                         <td>{{ text.request }}</td>
                         <td>{{ text.response }}</td>
+                        <td>{{ text.content_type }}</td>
                         <td>{{ text.date|date:"d.m.Y H:i" }}</td>
                     </tr>
                 {% endfor %}
